<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="@dimen/item_spacing">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgPatient"
        android:src="@drawable/ic_action_patient"
        android:layout_margin="@dimen/item_spacing"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientAccountNo"
        android:layout_toRightOf="@+id/imgPatient"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentPrimary"
        android:text="@string/patientAccount"
        style="@style/textBlue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientName"
        android:layout_toRightOf="@id/txtPatientAccountNo"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentPrimary"
        android:text="@string/patientName"
        style="@style/textBlue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientGender"
        android:layout_below="@+id/imgPatient"
        android:layout_margin="@dimen/item_spacing"
        android:layout_alignRight="@id/imgPatient"
        android:textSize="@dimen/contentSecondary"
        android:text="@string/patientGender"
        style="@style/textBlue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientDOB"
        android:layout_below="@id/txtPatientName"
        android:layout_toRightOf="@id/imgPatient"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentSecondary"
        android:text="@string/patientDOB"
        style="@style/textBlue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientContact"
        android:layout_toRightOf="@id/txtPatientDOB"
        android:layout_below="@id/txtPatientName"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentSecondary"
        android:text="@string/patientContact"
        style="@style/textBlue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientMedicalAid"
        android:layout_toRightOf="@id/txtPatientContact"
        android:layout_below="@id/txtPatientName"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentSecondary"
        android:text="@string/patientMedicalAid"
        style="@style/textBlue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPatientAddress"
        android:layout_below="@id/txtPatientDOB"
        android:layout_toRightOf="@id/imgPatient"
        android:layout_margin="@dimen/item_spacing"
        android:textSize="@dimen/contentSecondary"
        android:text="@string/patientAddress"
        style="@style/textBlue"/>

</RelativeLayout>