<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#012968"
        android:id="@+id/forgotHeader">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forgotLabel"
            android:textSize="20dp"
            android:textColor="#FFF"
            android:layout_margin="@dimen/keyline_margin"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textBlue"
        android:textSize="@dimen/contentPrimary"
        android:layout_margin="@dimen/item_spacing"
        android:text="@string/forgotVerificationLabel"
        android:layout_below="@id/forgotHeader"
        android:id="@+id/forgotVerificationLabel"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotVerificationSpinner"
        android:entries="@array/forgotVerificationArray"
        android:layout_below="@id/forgotVerificationLabel"
        android:layout_margin="@dimen/item_spacing"/>

    <Button android:id="@+id/btnVerificationSend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_margin="@dimen/item_spacing"
        android:layout_below="@id/forgotVerificationSpinner"
        android:textColor="#fff"
        android:text="@string/forgotVerificationButton"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtOTP"
        android:layout_below="@id/btnVerificationSend"
        android:hint="@string/forgotOTPLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPasswordSet"
        android:layout_below="@id/txtOTP"
        android:hint="@string/forgotPassword"
        android:password="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPasswordConfirm"
        android:layout_below="@id/txtPasswordSet"
        android:hint="@string/forgotConfirmPassword"
        android:password="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotButtons"
        android:layout_below="@+id/txtPasswordConfirm"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding">

        <Button
            android:id="@+id/btnConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:text="@string/forgotSetPassword"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/forgotPlaceholder"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="@dimen/item_spacing"/>

        <View android:id="@+id/forgotPlaceholder"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnForgotCancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:text="@string/forgotCancel"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/forgotPlaceholder"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="@dimen/item_spacing"/>
    </RelativeLayout>

</RelativeLayout>